configure docker for sf4

--- a/.env.dist
+++ b/.env.dist
@@ -1,11 +1,11 @@
 # Symfony application's path (absolute or relative)
-SYMFONY_APP_PATH=../path/to/symfony/folder
+SYMFONY_APP_PATH=../lament
 
 # MySQL
-MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=mydb
-MYSQL_USER=user
-MYSQL_PASSWORD=userpass
+MYSQL_ROOT_PASSWORD=usr_root
+MYSQL_DATABASE=lament
+MYSQL_USER=usr_lg
+MYSQL_PASSWORD=usr_pssa
 
 # Timezone
-TIMEZONE=Europe/Paris
+TIMEZONE=Europe/Prague
